--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ng build --prod",
+    "preinstall": "npm install -g @angular/cli @angular/compiler-cli typescript"
+ },
+ "engines": {
+   "node": "16.3.0",
+   "npm": "7.16.0"
+ 
   },
   "private": true,
   "dependencies": {
@@ -49,14 +56,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "typescript": "~4.2.3"
-  },
-  "scripts": {
-    
-    "postinstall": "ng build --prod",
-     "preinstall": "npm install -g @angular/cli @angular/compiler-cli typescript"
-  },
-  "engines": {
-    "node": "16.3.0",
-    "npm": "7.16.0"
   }
+
 }
